Fixed scrollbar styling

--- a/src/index.css
+++ b/src/index.css
@@ -177,7 +177,7 @@ section {
 .top-movies::-webkit-scrollbar-thumb {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #4caf50;
+  background-color: #4484c4;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -200,17 +200,29 @@ section {
   color: white;
 }
 
+.recently-viewed::-webkit-scrollbar {
+	width: 8px;
+	background-color: #f5f5f5;
+  }
+
+.recently-viewed::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+	background-color: #4484c4;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	white-space: nowrap;
+  }
+
 
 .recently-viewed-list {
-	
-	text-align: center;
+  text-align: center;
   color: white;
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: nowrap;
-
 }
 
 .ratedImg {
